# syg

./: .gitignore  Cargo.toml  tasks.md  test_1.txt
examples/: btree_lab.rs  find_traits_of_vector3.rs  test_1.rs  test_1.yaml
resources/: README.md  core_prelude_2021.rs  core_prelude_v1.rs  std_prelude_v1.rs
src/: add_crate.rs  bake_wildcards.rs  check_path_resolved.rs  dedoc.rs  display_utils.rs  eval_cfg.rs  global_ident.rs  ident_part.rs  inline_types.rs  lib.rs  list_symbols.rs  lookup_decl.rs  model.rs  named_tree.rs  resolve_idents.rs  stopwatch.rs
